fix: overflow scroll

--- a/src/views/war-memes.scss
+++ b/src/views/war-memes.scss
@@ -20,7 +20,7 @@
 .events {
   justify-self: center;
   margin-bottom: 40px;
-  overflow: scroll;
+  overflow: auto;
   height: 100%;
 }
 
